# context-keeper

./: .env.example  .env.staging.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  bench-report.html  docker-compose.staging.yml  docker-compose.yml
.cargo/: config.toml
.cursor/rules/: mcp-tool-patterns.mdc  rust-conventions.mdc  surrealdb-queries.mdc  testing-patterns.mdc
.cursor/skills/add-core-trait/: SKILL.md
.cursor/skills/add-mcp-tool/: SKILL.md
.cursor/skills/run-local-stack/: SKILL.md
.cursor/skills/test-runner/: SKILL.md
.cursor/skills/work-on-linear-issue/: SKILL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/actions/setup-linux-build/: action.yml
.github/workflows/: bench.yml  ci.yml  deploy-docs.yml  release.yml
Formula/: context-keeper.rb.template
configs/: claude-dev.json  cursor-mcp.json  obsidian-mcp.json
crates/context-keeper-bench/: Cargo.toml
crates/context-keeper-bench/benches/: dedup.yaml  default.yaml  demo-results.json  ingestion.rs  ingestion.yaml  locomo.yaml  longmemeval.yaml  model_comparison.yaml  negation.yaml  quality.yaml  search.rs  temporal.yaml
crates/context-keeper-bench/src/: backend.rs  ck_backend.rs  config.rs  judge.rs  lib.rs  main.rs  metrics.rs  quality.rs  report.rs  runner.rs  template.html
crates/context-keeper-bench/src/datasets/: locomo.rs  longmemeval.rs  mod.rs
crates/context-keeper-cli/: AGENTS.md  Cargo.toml
crates/context-keeper-cli/examples/: feature_showcase.rs  feature_showcase_llm.rs  long_term_memory.rs  quickstart.rs  temporal_demo.rs
crates/context-keeper-cli/src/: main.rs  telemetry.rs
crates/context-keeper-core/: AGENTS.md  Cargo.toml
crates/context-keeper-core/src/: error.rs  lib.rs  models.rs  traits.rs
crates/context-keeper-core/src/ingestion/: mod.rs  pipeline.rs
crates/context-keeper-core/src/search/: engine.rs  expander.rs  mod.rs
crates/context-keeper-core/src/temporal/: manager.rs  mod.rs
crates/context-keeper-mcp/: AGENTS.md  Cargo.toml
crates/context-keeper-mcp/src/: main.rs  oauth.rs  tenant.rs  tools.rs
crates/context-keeper-mcp/src/html/: consent.html
crates/context-keeper-rig/: AGENTS.md  Cargo.toml
crates/context-keeper-rig/src/: embeddings.rs  extraction.rs  lib.rs  rewriting.rs  tools.rs
crates/context-keeper-surreal/: AGENTS.md  Cargo.toml
crates/context-keeper-surreal/src/: client.rs  lib.rs  repository.rs  schema.rs  tenant_router.rs  vector_store.rs
crates/context-keeper-surreal/tests/: integration_test.rs
crates/context-keeper-tui/: Cargo.toml
crates/context-keeper-tui/src/: bootstrap.rs  error.rs  lib.rs  main.rs  types.rs
crates/context-keeper-tui/src/backend/: local.rs  mcp.rs  mock.rs  mod.rs
crates/context-keeper-tui/src/ui/: app.rs  event.rs  mod.rs  theme.rs
crates/context-keeper-tui/src/ui/components/: input.rs  mod.rs  status_bar.rs  tabs.rs
crates/context-keeper-tui/src/ui/screens/: admin.rs  dashboard.rs  entity.rs  ingest.rs  mod.rs  search.rs
devbox-mcp/: Dockerfile  requirements.txt  server.py
docs/: ADR-001-architecture-review.md  AGENT_PROMPT.md  HANDOFF.md  architecture.md  mcp.md
docs/internal/: AGENT_PROMPT.md  HANDOFF.md  ROADMAP.md  agentic-code-understanding-and-skills-taxonomy.md  benchmark-and-demo-strategy.md  competitive-landscape.md
docs/internal/plans/: LEVEL-0-foundation.md  LEVEL-1-correctness.md  LEVEL-2-publish.md  OVERVIEW.md
docs/plans/: LEVEL-2-publish.md  LEVEL-3-post-launch.md  MCP-TOOLSET-DESIGN.md
docs/website/: .gitignore  Dockerfile  docusaurus.config.ts  landing-preview.html  nginx.conf  package.json  sidebars.ts
docs/website/build-preview/: 404.html  index.html  sitemap.xml
docs/website/build-preview/assets/css/: styles.3393eceb.css
docs/website/build-preview/assets/js/: 0058b4c6.e87eb4e4.js  1031.1a7915f1.js  165.3aa97800.js  1679.7a94cbb1.js  17896441.05e3c6ee.js  1df93b7f.9c2a35e7.js  2038.cebc2f96.js  2130.1b289489.js  2237.498e76d3.js  2279.a797f1e8.js  2334.dedd0d00.js  2588.8e10c572.js  267de45b.a7d95d19.js  3201.f1acf36c.js  352bf907.6e1398ad.js  401a4ed1.b6646188.js  4070.054aebf8.js  4293.c2d955a6.js  4377.532e2239.js  4736.9e7c6005.js  4d54d076.2d371413.js  504.76e2d1a1.js  5187.10c44eb8.js  5281b7a2.76efd09a.js  (+40 more)
docs/website/demos/: cli.tape  http.tape
docs/website/docs/: adr-001.md  architecture.md  cli-reference.md  configuration.md  contributing.md  getting-started.md  how-it-works.md  mcp-tools.md  use-cases.md
docs/website/docs/tutorials/: authorization.md  cli-installation.md  http-transport.md  mcp-server-setup.md  running-locally.md  running-with-docker.md  tui.md
docs/website/src/components/: ArchitectureDiagram.tsx  DemoTabs.tsx  DemoVideo.tsx  FeatureConstellation.tsx  GraphScenario.tsx  HeroGraph.tsx  Icons.tsx  PipelineViz.tsx  ToolTerminal.tsx
docs/website/src/css/: custom.css
docs/website/src/hooks/: useNodeReveal.ts
docs/website/src/pages/: index.tsx
docs/website/static/: CNAME
examples/: README.md
migrations/: 001_initial_schema.surql
npm/context-keeper-mcp/: package.json
npm/context-keeper-mcp/test/: verify.test.js
npm/darwin-arm64/: package.json
npm/darwin-x64/: .npmrc  package.json
npm/linux-arm64/: package.json
npm/linux-x64/: package.json
plugins/claude/: .mcp.json  README.md
plugins/claude-desktop/: README.md  config.http.json  config.stdio.json  install.ps1  install.sh
plugins/claude/scripts/: install.sh
plugins/claude/skills/: review-with-memory.md  save-session-context.md  search-context.md
plugins/cursor/: README.md  package.json
plugins/cursor/src/: extension.ts
plugins/perplexity/: README.md  config.http.json  config.stdio.json
scripts/: configure-mcp.sh  cursor-launch.sh  deploy-staging.sh  dev-server.sh  devbox-provision.sh  record-demo.sh  test-oauth-flow.sh
test/: AGENTS.md  Cargo.toml
test/src/: fixtures.rs  harness.rs  lib.rs  metrics.rs
test/tests/: end_to_end.rs  extraction.rs  multi_agent.rs  search.rs  storage.rs  temporal.rs  tenant_isolation.rs
(+9 files in other folders)
