[workspace]
members = [
    "crates/context-keeper-core",
    "crates/context-keeper-rig",
    "crates/context-keeper-surreal",
    "crates/context-keeper-mcp",
    "crates/context-keeper-cli",
    "crates/context-keeper-bench",
    "test",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/0x313/context-keeper"

[workspace.dependencies]
# Internal crates
context-keeper-core = { path = "crates/context-keeper-core" }
context-keeper-rig = { path = "crates/context-keeper-rig" }
context-keeper-surreal = { path = "crates/context-keeper-surreal" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.2.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Unique IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Async traits
async-trait = "0.1"

# Database
surrealdb = { version = "3.0.4", features = ["kv-mem", "kv-rocksdb", "protocol-ws"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Environment variables
dotenv = "0.15.0"

# LLMs
rig-core = { version = "0.32.0" }

# MCP
rmcp = { version = "0.8", features = ["server", "transport-io", "transport-streamable-http-server"] }
