[workspace]
members = [
    "crates/context-keeper-core",
    "crates/context-keeper-rig",
    "crates/context-keeper-surreal",
    "crates/context-keeper-mcp",
    "crates/context-keeper-cli",
    "crates/context-keeper-tui",
    "crates/context-keeper-bench",
    "test",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/mindbend0x/context-keeper"

[workspace.dependencies]
# Internal crates
context-keeper-core = { path = "crates/context-keeper-core", version = "0.1.0" }
context-keeper-rig = { path = "crates/context-keeper-rig", version = "0.1.0" }
context-keeper-surreal = { path = "crates/context-keeper-surreal", version = "0.1.0" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.2.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Unique IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Async traits
async-trait = "0.1"

# Database — base dep is mem-only; crates opt in to heavier backends via features
surrealdb = { version = "3.0.4", features = ["kv-mem"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Environment variables
dotenv = "0.15.0"

# Config parsing
toml = "0.8"

# User directory discovery
dirs = "6"

# Telemetry (opt-in, OTLP)
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic"] }

# LLMs
rig-core = { version = "0.32.0" }

# MCP
rmcp = { version = "1.3", features = ["server", "transport-io", "transport-streamable-http-server", "auth"] }

[profile.dev]
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 1
