[package]
name = "context-keeper-test"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
context-keeper-core = { workspace = true }
context-keeper-surreal = { workspace = true }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
