[package]
name = "context-keeper-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bench]]
name = "ingestion"
harness = false

[[bench]]
name = "search"
harness = false

[dependencies]
context-keeper-core = { workspace = true }
context-keeper-surreal = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
