[package]
name = "context-keeper-cli"
description = "CLI tool for local development and testing of Context Keeper"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "context-keeper"
path = "src/main.rs"

[features]
default = ["tui"]
# Pulls in ratatui + crossterm via `context-keeper-tui`. Disable with
# `--no-default-features` if you want a slimmer CLI without the TUI surface.
tui = ["dep:context-keeper-tui"]
# Re-export the optional `remote-mcp` backend of the TUI for `ctxk tui --remote-mcp`.
tui-remote-mcp = ["tui", "context-keeper-tui/remote-mcp"]

[dependencies]
context-keeper-core.workspace = true
context-keeper-surreal = { workspace = true, features = ["full"] }
context-keeper-rig.workspace = true
context-keeper-tui = { path = "../context-keeper-tui", optional = true }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
clap.workspace = true
chrono.workspace = true
uuid.workspace = true
dotenv.workspace = true

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }{ binary-ext }"
pkg-fmt = "bin"
bin-dir = "{ bin }{ binary-ext }"
