[package]
name = "context-keeper-mcp"
description = "MCP server binary exposing Context Keeper tools over stdio and SSE transports"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "context-keeper-mcp"
path = "src/main.rs"

[dependencies]
context-keeper-core.workspace = true
context-keeper-rig.workspace = true
context-keeper-surreal = { workspace = true, features = ["full"] }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
clap.workspace = true
chrono.workspace = true
uuid.workspace = true
dotenv.workspace = true
rmcp.workspace = true
axum = "0.8"
http = "1"
subtle = "2"
tower-http = { version = "0.6", features = ["cors"] }
rand = "0.9"
sha2 = "0.10"
base64 = "0.22"
serde_urlencoded = "0.7"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }{ binary-ext }"
pkg-fmt = "bin"
bin-dir = "{ bin }{ binary-ext }"
