[package]
name = "context-keeper-rig"
description = "Rig framework integration layer: LLM completions, embeddings, and tool definitions"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
context-keeper-core.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
async-trait.workspace = true
rig-core.workspace = true
schemars.workspace = true
regex = "1"